--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ ul {
 
 .nav-wrapper ul li {
     list-style: none;
-    padding: 0 32px;
+    padding: 0 20px;
 }
 
 .nav-menu {
@@ -50,9 +50,16 @@ ul {
     position: relative;
 }
 
-.nav-wrapper li:first-child,
+.menu-item:hover {
+    color: var(--gray950);
+    cursor: pointer;
+}
+
+.nav-wrapper li:first-child{
+    padding-left: 0;
+}
 .nav-wrapperli:last-child {
-    padding: 0;
+    padding-right: 0;
 }
 
 .btn-features,
@@ -62,15 +69,29 @@ ul {
     font-size: 16px;
     cursor: pointer;
     color: var(--gray500);
-    padding: 0;   
+    padding: 0;
     font-weight: 500;
+    display: flex;
+    align-items: center;
+}
+
+.btn-features:hover,
+.btn-company:hover {
+    color: var(--gray950);
+}
+
+.btn-features img,
+.btn-company img {
+    margin-left: 12px;
 }
 
 .btn-features img.rotated,
 .btn-company img.rotated,
 .btn-features-mobile img.rotated,
 .btn-company-mobile img.rotated{
-  transform: rotate(180deg);
+    transform: rotate(180deg);
+    margin-left: 12px;
+
 }
 
 .nav-login {
@@ -91,6 +112,14 @@ ul {
     cursor: pointer;
 }
 
+.btn-regis:hover {
+    border:  1px solid var(--gray950);
+    color:  var(--gray950);
+}
+
+.btn-login:hover {
+    color: var(--gray950);
+}
 
 .btn-mobile-collapsed {
     display: none;
@@ -202,6 +231,7 @@ ul.nav-mobile {
 }
 
 @media only screen and (max-width: 500px) {
+    
     .container {
         width: 100%;
         margin: 0 auto;
@@ -287,6 +317,7 @@ ul.nav-mobile {
     .image-hero-mobile {
         display: block;
         height: 300px;
+        width: auto;
     }
 
     .text {
